Added ton of unstylized content

--- a/project01/index.html
+++ b/project01/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 
+
+
 <html>
 <head>
-<title>Title of the document</title>
+<title>Life Figure-Outer Application</title>
 </head>
 
+
+
 <body>
-Blah
+	<div id="main">
+		<h1>The Magic Life Figure-Outer!</h1>
+		<h6>Figuring out your life for you, so you don't have to…</h6>
+		
+		<ul id="nav">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Interests</a></li>
+			<li><a href="#">Health</a></li>
+			<li><a href="#">Academic</a></li>
+			<li><a href="#">Professional</a></li>
+			<li><a href="#">Fun</a></li>
+			<li><a href="#">Evil</a></li>
+		</ul>
+		
+		<h2>Lorem Ipsum Dolor Sit Amet.</h2>
+		
+		<form>
+		How do you feel today? <input type="text"><br>
+		How would you like to feel?<br>
+		(choose all that apply) <input type="text"><br>
+		<input type="submit" value="Feel me!">
+		</form>
+		
+		<span id="footer">&copy; 2011 Borg-Like Monstrosity of Mind Control, Inc. All rights reserved.</span>
+	</div>
 </body>
 </html>
