Added popups to nav bar

--- a/project01/index.html
+++ b/project01/index.html
@@ -15,13 +15,13 @@
 		<h6>Figuring out your life for you, so you don't have to…</h6>
 		
 		<ul id="nav">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Interests</a></li>
-			<li><a href="#">Health</a></li>
-			<li><a href="#">Academic</a></li>
-			<li><a href="#">Professional</a></li>
-			<li><a href="#">Fun</a></li>
-			<li><a href="#">Evil</a></li>
+			<li><a href="#" title="Antidisestablishmentarianism">Home</a></li>
+			<li><a href="#" title="Supercalafragilisticexpialedocious">Interests</a></li>
+			<li><a href="#" title="Deoxyrhibonucleicacid">Health</a></li>
+			<li><a href="#" title="Tiny word">Academic</a></li>
+			<li><a href="#" title="I am a Mac">Professional</a></li>
+			<li><a href="#" title="Blahblahblahblahblahblah">Fun</a></li>
+			<li><a href="#" title="Wheeeeeeeeee!">Evil</a></li>
 		</ul>
 		
 		<h2>Lorem Ipsum Dolor Sit Amet.</h2>
