Added more empty files

--- a/project01/index.html
+++ b/project01/index.html
@@ -27,10 +27,10 @@
 		<h2>Lorem Ipsum Dolor Sit Amet.</h2>
 		
 		<form>
-		How do you feel today? <input type="text"><br>
+		How do you feel today? <input type="text" name="today"><br>
 		How would you like to feel?<br>
-		(choose all that apply) <input type="text"><br>
-		<input type="submit" value="Feel me!">
+		(choose all that apply) <input type="text" name="future"><br>
+		<input type="submit" value="Feel me!" onClick=";">
 		</form>
 		
 		<span id="footer">&copy; 2011 Borg-Like Monstrosity of Mind Control, Inc. All rights reserved.</span>
