Happy javascript fun

--- a/project01/index.html
+++ b/project01/index.html
@@ -4,9 +4,10 @@
 
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="main.css" media="screen">
+<script type="text/javascript" src="form.js"></script>
 <title>Life Figure-Outer Application</title>
 </head>
-
 
 
 <body>
@@ -30,7 +31,7 @@
 		How do you feel today? <input type="text" name="today"><br>
 		How would you like to feel?<br>
 		(choose all that apply) <input type="text" name="future"><br>
-		<input type="submit" value="Feel me!" onClick=";">
+		<input type="submit" value="Feel me!" onClick="submitButton()">
 		</form>
 		
 		<span id="footer">&copy; 2011 Borg-Like Monstrosity of Mind Control, Inc. All rights reserved.</span>
