--- a/project01/index.html
+++ b/project01/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div id="main">
 		<h1>The Magic Life Figure-Outer!</h1>
-		<h6>Figuring out your life for you, so you don't have to…</h6>
+		<h6>Figuring out your life for you, so you don't have to...</h6>
 		
 		<ul id="nav">
 			<li><a href="#" title="Antidisestablishmentarianism">Home</a></li>
