MANY MANY changes

--- a/project01/index.html
+++ b/project01/index.html
@@ -12,10 +12,13 @@
 
 <body>
 	<div id="main">
+		<div id="header">
 		<h1>The Magic Life Figure-Outer!</h1>
 		<h6>Figuring out your life for you, so you don't have to...</h6>
+		</div>
 		
-		<ul id="nav">
+		<div id="nav">
+		<ul>
 			<li><a href="#" title="Antidisestablishmentarianism">Home</a></li>
 			<li><a href="#" title="Supercalafragilisticexpialedocious">Interests</a></li>
 			<li><a href="#" title="Deoxyrhibonucleicacid">Health</a></li>
@@ -24,6 +27,7 @@
 			<li><a href="#" title="Blahblahblahblahblahblah">Fun</a></li>
 			<li><a href="#" title="Wheeeeeeeeee!">Evil</a></li>
 		</ul>
+		</div>
 		
 		<h2>Lorem Ipsum Dolor Sit Amet.</h2>
 		
@@ -34,7 +38,9 @@
 		<input type="submit" value="Feel me!" onClick="submitButton()">
 		</form>
 		
-		<span id="footer">&copy; 2011 Borg-Like Monstrosity of Mind Control, Inc. All rights reserved.</span>
+		<div id="footer">
+			<span id="footertext">&copy; 2011 Borg-Like Monstrosity of Mind Control, Inc. All rights reserved.</span>
+		</div>
 	</div>
 </body>
 </html>
