--- a/project01/index.html
+++ b/project01/index.html
@@ -18,14 +18,14 @@
 		</div>
 		
 		<div id="nav">
-		<ul>
-			<li><a href="#" title="Antidisestablishmentarianism">Home</a></li>
-			<li><a href="#" title="Supercalafragilisticexpialedocious">Interests</a></li>
-			<li><a href="#" title="Deoxyrhibonucleicacid">Health</a></li>
-			<li><a href="#" title="Tiny word">Academic</a></li>
-			<li><a href="#" title="I am a Mac">Professional</a></li>
-			<li><a href="#" title="Blahblahblahblahblahblah">Fun</a></li>
-			<li><a href="#" title="Wheeeeeeeeee!">Evil</a></li>
+		<ul class="horizontal">
+			<li class="navitem"><a href="#" title="Antidisestablishmentarianism">Home</a></li>
+			<li class="navitem"><a href="#" title="Supercalafragilisticexpialedocious">Interests</a></li>
+			<li class="navitem"><a href="#" title="Deoxyrhibonucleicacid">Health</a></li>
+			<li class="navitem"><a href="#" title="Tiny word">Academic</a></li>
+			<li class="navitem"><a href="#" title="I am a Mac">Professional</a></li>
+			<li class="navitem"><a href="#" title="Blahblahblahblahblahblah">Fun</a></li>
+			<li class="navitem"><a href="#" title="Wheeeeeeeeee!">Evil</a></li>
 		</ul>
 		</div>
 		
