--- a/project01/index.html
+++ b/project01/index.html
@@ -14,7 +14,7 @@
 	<div id="main">
 		<div id="header">
 		<h1>The Magic Life Figure-Outer!</h1>
-		<h6>Figuring out your life for you, so you don't have to...</h6>
+		<span id="titlesub">Figuring out your life for you, so you don't have to...</span>
 		</div>
 		
 		<div id="nav">
@@ -38,7 +38,7 @@
 		<input type="submit" value="Feel me!" onClick="submitButton()">
 		</form>
 		
-		<div id="footer">
+		<div id="footer" align="center">
 			<span id="footertext">&copy; 2011 Borg-Like Monstrosity of Mind Control, Inc. All rights reserved.</span>
 		</div>
 	</div>
