--- a/project01/index.html
+++ b/project01/index.html
@@ -14,7 +14,7 @@
 	<div id="main">
 		<div id="header">
 		<h1>The Magic Life Figure-Outer!</h1>
-		<span id="titlesub">Figuring out your life for you, so you don't have to...</span>
+		<span id="titlesub">Figuring out your life for you, so you don't have to…</span>
 		</div>
 		
 		<div id="nav">
@@ -29,6 +29,9 @@
 		</ul>
 		</div>
 		
+		
+		<div id="content">
+		
 		<h2>Lorem Ipsum Dolor Sit Amet.</h2>
 		
 		<form>
@@ -41,6 +44,9 @@
 		<div id="footer" align="center">
 			<span id="footertext">&copy; 2011 Borg-Like Monstrosity of Mind Control, Inc. All rights reserved.</span>
 		</div>
+		
+		</div>
+		
 	</div>
 </body>
 </html>
