--- a/project01/index.html
+++ b/project01/index.html
@@ -14,7 +14,7 @@
 	<div id="main">
 		<div id="header">
 		<h1>The Magic Life Figure-Outer!</h1>
-		<span id="titlesub">Figuring out your life for you, so you don't have to…</span>
+		<span id="titlesub">Figuring out your life for you, so you don't have to...</span>
 		</div>
 		
 		<div id="nav">
