--- a/project01/index.html
+++ b/project01/index.html
@@ -14,7 +14,7 @@
 	<div id="main">
 		<div id="header">
 		<h1>The Magic Life Figure-Outer!</h1>
-		<span id="titlesub">Figuring out your life for you, so you don't have to...</span>
+		<span id="titlesub">Figuring out your life for you, so you don't have to…</span>
 		</div>
 		
 		<div id="nav">
@@ -41,12 +41,12 @@
 		<input type="submit" value="Feel me!" onClick="submitButton()">
 		</form>
 		
+		</div>
+		
+		
 		<div id="footer" align="center">
 			<span id="footertext">&copy; 2011 Borg-Like Monstrosity of Mind Control, Inc. All rights reserved.</span>
 		</div>
-		
-		</div>
-		
 	</div>
 </body>
 </html>
