--- a/project01/index.html
+++ b/project01/index.html
@@ -35,10 +35,10 @@
 		<h2>Lorem Ipsum Dolor Sit Amet.</h2>
 		
 		<form>
-		How do you feel today? <input type="text" name="today"><br>
+		How do you feel today? <input type="text" name="today" id="form1"><br>
 		How would you like to feel?<br>
 		(choose all that apply) <input type="text" name="future"><br>
-		<input type="submit" value="Feel me!" onClick="submitButton()">
+		<input type="button" value="Feel me!" onClick="submitButton()">
 		</form>
 		
 		</div>
