--- a/project01/index.html
+++ b/project01/index.html
@@ -14,7 +14,7 @@
 	<div id="main">
 		<div id="header">
 		<h1>The Magic Life Figure-Outer!</h1>
-		<span id="titlesub">Figuring out your life for you, so you don't have to…</span>
+		<span id="titlesub">Figuring out your life for you, so you don't have to...</span>
 		</div>
 		
 		<div id="nav">
@@ -34,12 +34,28 @@
 		
 		<h2>Lorem Ipsum Dolor Sit Amet.</h2>
 		
+		<div id="left">
 		<form>
 		How do you feel today? <input type="text" name="today" id="form1"><br>
 		How would you like to feel?<br>
-		(choose all that apply) <input type="text" name="future"><br>
+		(choose all that apply)
+		<select name="future" size="4">
+			<option value="1">Comfortably numb</option>
+			<option value="2">Grumpy as poop, you jerk</option>
+			<option value="3">Happy like I'm on controlled substances</option>
+			<option value="4">Normal. Absolutely Normal.</option>
+		</select>
+		<br>
 		<input type="button" value="Feel me!" onClick="submitButton()">
 		</form>
+		</div>
+		
+		<div id="right">
+		<div style="position:relative; top:-10px;">
+		<h3>Current Progress in Life</h3>
+		Mediocre. You really should enjoy life more.
+		</div>
+		</div>
 		
 		</div>
 		
