--- a/project01/index.html
+++ b/project01/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div id="main">
 		<div id="header">
-		<h1>The Magic Life Figure-Outer!</h1>
+		<h1 style="position:relative; top:5px;">The Magic Life Figure-Outer!</h1>
 		<span id="titlesub">Figuring out your life for you, so you don't have to...</span>
 		</div>
 		
@@ -51,7 +51,7 @@
 		</div>
 		
 		<div id="right">
-		<div style="position:relative; top:-10px;">
+		<div style="position:relative; top:-15px; left:5px;">
 		<h3>Current Progress in Life</h3>
 		Mediocre. You really should enjoy life more.
 		</div>
