All positioning finalized

--- a/project01/index.html
+++ b/project01/index.html
@@ -52,7 +52,7 @@
 					(choose all that apply)
 				</td>
 				<td>
-					<select name="future" size="4" style="margin-top:10px;">
+					<select name="future" size="4" style="margin-top:10px; position:relative; top:7px;">
 						<option value="1">Comfortably numb</option>
 						<option value="2">Grumpy as poop, you jerk</option>
 						<option value="3">Happy like I'm on controlled substances</option>
@@ -65,7 +65,7 @@
 					&nbsp;
 				</td>
 				<td>
-					<input style="margin-top:15px;" type="button" value="Feel me!" onClick="submitButton()">
+					<input style="margin-top:20px;" type="button" value="Feel me!" onClick="submitButton()">
 				</td>
 			</tr>
 		</table>
