--- a/project01/index.html
+++ b/project01/index.html
@@ -14,7 +14,7 @@
 	<div id="main">
 		<div id="header">
 		<h1 style="position:relative; top:5px;">The Magic Life Figure-Outer!</h1>
-		<span style="position:relative; top:-18px;" id="titlesub">Figuring out your life for you, so you don't have to…</span>
+		<span style="position:relative; top:-18px;" id="titlesub">Figuring out your life for you, so you don't have to...</span>
 		</div>
 		
 		<div id="nav">
@@ -52,7 +52,7 @@
 					(choose all that apply)
 				</td>
 				<td>
-					<select name="future" size="4" style="margin-top:10px; position:relative; top:7px;">
+					<select multiple name="future" size="4" style="margin-top:10px; position:relative; top:7px;">
 						<option value="1">Comfortably numb</option>
 						<option value="2">Grumpy as poop, you jerk</option>
 						<option value="3">Happy like I'm on controlled substances</option>
