--- a/project07/index.html
+++ b/project07/index.html
@@ -13,10 +13,10 @@
 <p class="subtitle">Fool! You have followed a link here and now your life depends on guessing my magic number!</p>
 <p>Between 1 and 100! Because it is magic!</p>
 <h2 id="score"><span id="guessesLeft"></span> Guesses Left</h2>
-<form id="guessTheNumber">
+<form id="guessTheNumber"onsubmit="formSubmitted();">
   <input type="text" size="3" name="guess" id="guess">
   <br>
-  <input type="button" id="btnGuess" value="Guess!">
+  <input type="submit" id="btnGuess" value="Guess!">
 </form>
 
 <h2><span class="highScore">High</span> Scores</h2>
